# mire

./: mire.code-workspace
docs/: characters.md
service/: .env  .gitignore  .golangci.yml  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  docker.sh  go.mod  go.sum
service/all/: Cargo.toml
service/all/src/: database.rs  lib.rs  main.rs  server.rs  service.rs
service/all/src/database/: health.rs
service/all/src/health/: service.rs
service/all/tests/testsubject/: http.rs  postgres.rs
service/cmd/mire/: config.go  main.go
service/crates/authentication/: Cargo.toml
service/crates/authentication/src/: config.rs  endpoints.rs  google.rs  lib.rs  model.rs  service.rs
service/crates/authentication/src/endpoints/: complete.rs  list_providers.rs  start.rs
service/crates/authentication/src/google/: access_token.rs  config.rs  provider.rs
service/crates/authentication/src/model/: provider_id.rs  start_authentication.rs
service/crates/authentication/src/service/: authenticated_user.rs  complete.rs  provider.rs  providers.rs  registry.rs  start.rs
service/crates/authorization/: Cargo.toml
service/crates/authorization/src/: config.rs  http.rs  lib.rs  model.rs  service.rs
service/crates/authorization/src/http/: authentication.rs  authenticator.rs  request.rs
service/crates/authorization/src/model/: principal_id.rs  security_context.rs  security_context_id.rs  signed_security_context.rs
service/crates/authorization/src/service/: claims.rs  errors.rs  generate.rs  sign.rs  signing_key.rs  verify.rs
service/crates/database/: Cargo.toml
service/crates/database/migrations/: 00001-create-users-table.sql  00002-create-abilities-table.sql  00003-abilities-default-value.sql  00004-rename-abilities-stats.sql
service/crates/database/src/: lib.rs  postgres.rs
service/crates/database/tests/: test.rs
service/crates/health/: Cargo.toml
service/crates/health/src/: config.rs  endpoints.rs  model.rs  service.rs
service/crates/http/: Cargo.toml
service/crates/http/src/: lib.rs  pagination.rs
service/crates/http/src/problem/: model.rs  types.rs  validation.rs
service/crates/mire/: Cargo.toml
service/crates/mire/src/: config.rs  lib.rs  main.rs  service.rs
service/crates/mire/tests/: mire.rs
service/crates/mire/tests/tests/: authentication.rs  health.rs  mod.rs  stats.rs  users.rs
service/crates/model/: Cargo.toml
service/crates/model/src/: identity.rs  lib.rs  model.rs  page.rs  sorts.rs
service/crates/problem/: Cargo.toml
service/crates/problem/src/: lib.rs  problem.rs  response.rs  types.rs
service/crates/server/: Cargo.toml
service/crates/server/src/: lib.rs
service/crates/testdata/: Cargo.toml
service/crates/testdata/src/: lib.rs  seed.rs  stats.rs  users.rs
service/crates/testdatabase/: Cargo.toml
service/crates/testdatabase/src/: lib.rs  query.rs  seed.rs
service/crates/users/: Cargo.toml
service/crates/users/src/: config.rs  endpoints.rs  lib.rs  model.rs  repository.rs  service.rs
service/crates/users/tests/: create.rs  get_by_authentication.rs  get_by_id.rs  service.rs
service/crates/world/: Cargo.toml
service/crates/world/src/: config.rs  lib.rs  stats.rs
service/crates/world/tests/: get.rs  service.rs  world.rs
service/database/: Cargo.toml
service/database/src/: health.rs  migrate.rs  postgres.rs
service/docker/: package.sh  start.sh
service/health/: Cargo.toml
service/health/src/: config.rs  lib.rs  model.rs
service/integration/: database.go  health_test.go  inject.go  service.go  start_service_test.go  testdatabase.go  testresponse.go  testsubject.go
service/integration/.snapshots/: TestHealth
service/integration/database/: database.go  health.go
service/integration/health/: health_test.go
service/integration/health/.snapshots/: TestHealth
service/internal/: service.go  test.go  testing.go
service/internal/authorization/: component.go  generation.go  generation_test.go  model.go  service.go  service_test.go  signing.go  signing_test.go  useCases.go
service/internal/database/: database.go  database_test.go  health.go  migrate.go  migrate_test.go
service/internal/database/migrations/: 000001-users-table.sql
service/internal/health/: component.go  healthchecker.go  http.go  service.go  service_test.go
service/internal/httpresponse/: render.go
service/internal/infrastructure/database/: database.go  errors.go  exec.go  migrations.go  query.go  suite.go
service/internal/infrastructure/databasetest/: exec_test.go  healthcheck_test.go  migrations_test.go  query_test.go
service/internal/infrastructure/health/: config.go  configure.go  endpoints.go  healthchecker.go  model.go  model_test.go  service.go  service_test.go  usecases.go
service/internal/infrastructure/server/: config.go  server.go
service/internal/model/: identity.go
service/internal/players/: configure.go  model.go  repository.go  service.go  usecases.go
service/internal/players/configure/: configure.go
service/internal/players/database/: repository.go
service/internal/players/db/: create.go  model.go  repository.go
service/internal/players/service/: creator.go  creator_test.go  repository.go  service.go  service_suite_test.go
service/internal/server/: server.go  testing.go
service/internal/users/: component.go  getUsers.go  model.go  repository.go  service.go
service/mire/: Cargo.toml
service/mire/src/: service.rs
service/mire/tests/testsubject/: database.rs  mod.rs
service/server/: Cargo.toml
service/server/src/: lib.rs
service/src/: database.rs  health.rs  lib.rs  main.rs  server.rs  service.rs
service/src/database/: postgres.rs
service/src/health/: config.rs  endpoints.rs  healthchecker.rs  model.rs  service.rs
service/test/: database.go
service/test/databasesuite/: suite.go  testdatabase.go
service/tests/: database.go  mire.rs  start_service_test.go  testdatabase.go  testresponse.go  testsubject.go
service/tests/health/: health_test.go
service/tests/health/.snapshots/: TestHealth
service/tests/tests/: health.rs
service/tests/testsubject/: http.rs  mod.rs
(+139 files in other folders)
