[package]
name = "mire"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mire_lib"

[[bin]]
name = "mire"

[dependencies]
actix-rt = "1.1.1"
dotenv = "0.15.0"

[dev-dependencies]
