[package]
name = "mire-health"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
tracing = "0.1.15"
actix-web = "2.0.0"
actix-cors = "0.2.0"
async-trait = "0.1.36"
actix-http = "1.0.1"
futures = "0.3.5"
tracing-futures = "0.2.4"

mire-server = { path = "../server" }

[dev-dependencies]
assert2 = "0.2.1"
