[package]
name = "mire"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "mire_lib"

[[bin]]
name = "mire"

[dependencies]
actix-rt = "1.1.1"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.114", features = ["derive"] }
tracing = "0.1.15"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.6"
log = "0.4.8"
tracing-futures = "0.2.4"
actix-http = "1.0.1"
futures = "0.3.5"

mire-server = { path = "../server" }
mire-health = { path = "../health" }
mire-database = { path = "../database" }

[dev-dependencies]
assert2 = "0.2.1"
insta = "0.16.0"
testcontainers = "0.9.1"
lazy_static = "1.4.0"
actix-web = "2.0.0"
