[package]
name = "mire-authentication"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "1.0.1"
actix-web = "2.0.0"
async-trait = "0.1.36"
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "1.0.20"
tracing = "0.1.17"
tracing-futures = "0.2.4"
uritemplate = "0.1.2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

mire-authorization = { path = "../authorization" }
mire-server = { path = "../server" }
mire-users = { path = "../users" }

[dev-dependencies]
assert2 = "0.3.1"
