[package]
name = "mire-authentication"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "2.0.0"
actix-web = "3.0.1"
async-trait = "0.1.40"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
string_template = "0.2.1"
thiserror = "1.0.20"
tracing = "0.1.19"
tracing-futures = "0.2.4"
uritemplate = "0.1.2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

mire-authorization = { path = "../authorization" }
mire-server = { path = "../server" }
mire-users = { path = "../users" }

[dev-dependencies]
assert2 = "0.3.2"
