[package]
name = "mire-authorization"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "1.0.20"
tracing = "0.1.17"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
assert2 = "0.3.1"