[package]
name = "mire-authorization"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "1.0.1"
actix-web = "2.0.0"
chrono = { version = "0.4.13", features = ["serde"] }
futures = "0.3.5"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.115", features = ["derive"] }
thiserror = "1.0.20"
tracing = "0.1.19"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

mire-server = { path = "../server" }

[dev-dependencies]
assert2 = "0.3.1"
