[package]
name = "mire-database"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
async-trait = "0.1.36"
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
postgres-types = "0.1.2"
rust-embed = "5.6.0"
tokio-postgres = "0.5.5"
tracing = "0.1.17"

mire-health = { path = "../health" }

[dev-dependencies]
actix-rt = "1.1.1"

mire-testdatabase = { path = "../testdatabase" }
