[package]
name = "mire-database"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
async-trait = "0.1.37"
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
postgres-types = { version = "0.1.2", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
rust-embed = "5.6.0"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.19"

mire-health = { path = "../health" }

[dev-dependencies]
actix-rt = "1.1.1"

mire-testdatabase = { path = "../testdatabase" }
