[package]
name = "mire-health"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "1.0.1"
actix-web = "2.0.0"
async-trait = "0.1.37"
futures = "0.3.5"
serde = { version = "1.0.115", features = ["derive"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"

mire-server = { path = "../server" }

[dev-dependencies]
assert2 = "0.3.1"
