[package]
name = "mire-health"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "2.0.0"
actix-web = "3.0.1"
async-trait = "0.1.40"
futures = "0.3.5"
serde = { version = "1.0.116", features = ["derive"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"

mire-server = { path = "../server" }

[dev-dependencies]
assert2 = "0.3.2"
