[package]
name = "mire-http"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "2.0.0"
actix-web = "3.0.1"
futures = "0.3.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }
