[package]
name = "mire"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "mire_lib"

[[bin]]
name = "mire"

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.1.1"
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.5"
log = "0.4.11"
serde = { version = "1.0.114", features = ["derive"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.9"

mire-database = { path = "../database" }
mire-health = { path = "../health" }
mire-server = { path = "../server" }

[dev-dependencies]
actix-web = "2.0.0"
assert2 = "0.3.1"
insta = "0.16.1"
mire-testdatabase = { path = "../testdatabase" }
