[package]
name = "mire"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "mire_lib"

[[bin]]
name = "mire"

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.1.1"
chrono = { version = "0.4.13", features = ["serde"] }
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.5"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.11"

mire-authentication = { path = "../authentication" }
mire-authorization = { path = "../authorization" }
mire-database = { path = "../database" }
mire-health = { path = "../health" }
mire-server = { path = "../server" }
mire-users = { path = "../users" }

[dev-dependencies]
actix-web = "2.0.0"
assert2 = "0.3.1"
insta = {version = "0.16.1", features=["redactions"] }
mockito = "0.27.0"
serde_json = { version = "1.0.57", features = ["preserve_order"] }
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }

mire-testdata = { path = "../testdata" }
mire-testdatabase = { path = "../testdatabase" }
