[package]
name = "mire-problem"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "1.0.1"
actix-web = "2.0.0"
futures = "0.3.5"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = { version = "1.0.57", features = ["preserve_order"] }
