[package]
name = "mire-testdata"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
async-trait = "0.1.36"
chrono = { version = "0.4.13", features = ["serde"] }
postgres-types = { version = "0.1.2", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
serde_json = "1.0.57"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.17"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
