[package]
name = "mire-testdatabase"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
lazy_static = "1.4.0"
postgres-types = { version = "0.1.2", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
testcontainers = "0.9.1"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.17"

mire-testdata = { path = "../testdata" }
