[package]
name = "mire-testdatabase"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
postgres-types = { version = "0.1.2", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
testcontainers = "0.10.0"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.19"

mire-testdata = { path = "../testdata" }
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
