[package]
name = "mire-users"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "1.0.20"
tracing = "0.1.17"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

mire-database = { path = "../database" }
mire-model = { path = "../model" }

[dev-dependencies]
actix-rt = "1.1.1"
assert2 = "0.3.1"

mire-testdatabase = { path = "../testdatabase" }
