[package]
name = "mire-users"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "1.0.1"
actix-web = "2.0.0"
bytes = "0.5.6"
chrono = { version = "0.4.13", features = ["serde"] }
postgres-types = { version = "0.1.2", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

mire-authorization = { path = "../authorization" }
mire-database = { path = "../database" }
mire-model = { path = "../model" }
mire-problem = { path = "../problem" }
mire-server = { path = "../server" }

[dev-dependencies]
actix-rt = "1.1.1"
assert2 = "0.3.1"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.11"

mire-testdata = { path = "../testdata" }
mire-testdatabase = { path = "../testdatabase" }
