[package]
name = "mire-world"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-http = "2.0.0"
actix-web = "3.0.1"
bytes = "0.5.6"
chrono = { version = "0.4.15", features = ["serde"] }
futures = "0.3.5"
postgres-types = { version = "0.1.2", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

mire-database = { path = "../database" }
mire-model = { path = "../model" }
mire-problem = { path = "../problem" }
mire-server = { path = "../server" }

[dev-dependencies]
actix-rt = "1.1.1"
assert2 = "0.3.2"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.12"

mire-testdata = { path = "../testdata" }
mire-testdatabase = { path = "../testdatabase" }
